# positive-disruption

./: .gcloudignore  .gitignore  .~lock.2.csv#  .~lock.test.csv#  1.csv  2.csv  Dockerfile  LICENSE  Makefile  NCSmitigation.csv  PD21 Model.md  Pipfile  README.md  README.rst  World test.md  _config.yml  adoptioncurves.csv  afolu costs line28228.csv  cdr costs line28228.csv  charts.md  charts32.md  codesnippets.txt  costs line28228.csv  ed.csv  energy_demand_out.csv  estimate_logistic_params.py  index.html  main.py  md_etl.py  per.csv  pyproject.toml  re.csv  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  streamlit_app.py  test.csv  test3.csv  this.csv  (+1 more)
book/: chapter2.md
cache/: cache.db
cdr/: README.md  cdr_abstract_types.py  cdr_main.py  cdr_types.py  cdr_util.py  ecr_types.py  ncs_types.py
charts/: AFRICA.md  ASEAN.md  ASIAPAC.md  AdvancedECO copy.md  AdvancedECO.md  BRA.md  BRAZIL.md  CHINA.md  CHN.md  CSAM.md  DevelopingECO.md  EU.md  EUR .md  EUR.md  EURASIA.md  IND.md  INDIA.md  JPN.md  ME.md  NAM.md  NonOECD.md  OECD.md  Other.md  RUS.md  SAFR.md  US.md  USA.md  World.md  World_old.md  Worldcopy.md  acurves-absolute-pathway-World-Buildings.html  acurves-absolute-pathway-World-ElectricPower.html  acurves-absolute-pathway-World-Industrial.html  acurves-absolute-pathway-World-Transportation.html  acurves-baseline-World-ElectricPower.html  acurves-baseline-World-Industrial.html  acurves-baseline-World-Transportation.html  acurves-custom-absolute-pathway-World-Buildings.html  acurves-custom-absolute-pathway-World-ElectricPower.html  (+1943 more)
docs/: README.md  (+9 more)
(+3389 files in other folders)
